<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movieyat</string>
    <string name="title_section1">1st</string>
    <string name="title_section2">2nd</string>
    <string name="title_section3">3rd</string>
    <string name="title_section4">4th</string>
    <string name="title_section5">5th</string>
    <string name="title_section6">6th</string>
    <string name="title_section7">7th</string>
    <string name="title_section8">8th</string>
    <string name="title_section9">9th</string>
    <string name="title_section10">10th</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">The Title</string>
    <string name="year">The Year</string>
    <string name="release_date">Release Date</string>
    <string name="ratings">The Ratings</string>
    <string name="casts">The Casts</string>

</resources>
